# Ai-App

backend/: .env  pyproject.toml
backend/src/: app.py
backend/src/utils/: geini_utils.py  qdrant.py  rag.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  QuestionForm.js
